added a paragraph  in the body

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
      <h2>MY FIRST WEBSITE</h2>
+     <p> I am testing the use of git to initialise, add and commit documents to git to control the versions of my documents</p>
 </body>
 </html>
