added a second heading to index.html and created a new file readme.md

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>TEST WEBSITE</title>
     <h1>MY FIRST WEBSITE</h1>
+    <h2>Welcome to David's WEBSITE</h2>
 </head>
 <body>
      <h2>MY FIRST WEBSITE</h2>
